<resources>
    <string name="app_name">My App</string>
    <string name="hi"> Create account </string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="text">Введите текст:</string>
    <string name="list_of_business">Список дел:</string>
    <string name="add">Добавить</string>
    <string name="registration"> registrate </string>
    <string name="autorization">Autorization</string>
    <string name="autorizate">Autorize</string>
    <string name="EnterDates">Введите данные для входа</string>
    <string name="Product">Товары</string>
    <string name="Watch">Посмотреть</string>
    <string name="Buy">Buy</string>



</resources>