<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:background="@color/grey">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="100sp"
        android:layout_marginBottom="10dp"
        android:background="@color/black"
        android:fontFamily="@font/inter_bold"
        android:text="@string/hi"
        android:textColor="@color/gold"
        android:textSize="25sp"
        android:textStyle="bold" />


    <EditText
        android:id="@+id/user_login"
        android:layout_width="220sp"
        android:layout_height="50sp"
        android:textColor="@color/gold"
        android:ems="10"
        android:textColorHint="@color/gold"
        android:inputType="text"
        android:layout_marginBottom="30dp"
        android:layout_gravity="center"
        android:minHeight="48dp"
        android:hint="@string/login"
        android:autofillHints="username" />

    <EditText
        android:id="@+id/user_password"
        android:layout_width="220sp"
        android:layout_height="50sp"
        android:ems="10"
        android:textColor="@color/gold"
        android:textColorHint="@color/gold"
        android:layout_gravity="center"
        android:layout_marginBottom="30dp"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:text="@string/password"
        android:autofillHints="password" />

    <EditText
        android:id="@+id/user_email"
        android:layout_width="220sp"
        android:layout_height="50sp"
        android:ems="10"
        android:textColor="@color/gold"
        android:textColorHint="@color/gold"
        android:layout_gravity="center"
        android:layout_marginBottom="30dp"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:text="@string/password"
        android:autofillHints="password" />

    <Button
        android:id="@+id/button"
        style="@style/TextAppearance.AppCompat.Widget.ActionMode.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="@color/black"
        android:text="@string/registration"
        android:textColor="@color/gold"
        android:textColorHighlight="#FFEB3B"
        android:textColorLink="@color/gold"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_data"
        app:layout_constraintVertical_bias="0.057" />

</LinearLayout>